fix: AI 회화 채팅 보고서 가져올 때 대화내역 가져오기 쿼리 수정, 카테고리 enum값 수정