@@ -1,7 +1,9 @@
 package com.ssafy.backend.domain.aichat.repository;
 
+import com.querydsl.core.Tuple;
 import com.querydsl.core.types.dsl.CaseBuilder;
 import com.querydsl.core.types.dsl.Expressions;
+import com.querydsl.jpa.JPAExpressions;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import com.ssafy.backend.domain.aichat.dto.AiChatAndFeedbackInfo;
 import com.ssafy.backend.domain.aichat.entity.QAiChatFeedback;
@@ -11,6 +13,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Repository
@@ -22,30 +25,49 @@ public class AiChatFeedbackRepositoryCustomImpl implements AiChatFeedbackReposit
         QAiChatHistory qAiChatHistory = QAiChatHistory.aiChatHistory;
         QAiChatFeedback qAiChatFeedback = QAiChatFeedback.aiChatFeedback;
 
-        // 급한대로 gpt의 피드백도 생기는 오류를
-        // 아래 분기를 통해 해결
-        return queryFactory
+        // 사용자의 첫 메시지 ID를 찾습니다.
+        Long firstUserMessageId = queryFactory
+                .select(qAiChatHistory.id.min())
+                .from(qAiChatHistory)
+                .where(qAiChatHistory.aiChatRoom.id.eq(roomId),
+                        qAiChatHistory.sender.eq(AiChatSender.USER))
+                .fetchOne();
+
+        // firstUserMessageId 이전의 마지막 GPT 메시지 ID를 찾습니다.
+        Long lastGptMessageIdBeforeFirstUser = queryFactory
+                .select(qAiChatHistory.id.max())
+                .from(qAiChatHistory)
+                .where(qAiChatHistory.aiChatRoom.id.eq(roomId),
+                        qAiChatHistory.sender.eq(AiChatSender.GPT),
+                        qAiChatHistory.id.lt(firstUserMessageId))
+                .fetchOne();
+
+        // lastGptMessageIdBeforeFirstUser 이후의 모든 메시지를 가져옵니다.
+        List<Tuple> results = queryFactory
                 .select(
-                        qAiChatHistory.id, // 이 부분은 chatId를 나타내며, AiChatHistory의 ID를 참조합니다.
-                        qAiChatHistory.sender, // sender에 해당
-                        qAiChatHistory.content, // message에 해당
+                        qAiChatHistory.id,
+                        qAiChatHistory.sender,
+                        qAiChatHistory.content,
                         new CaseBuilder()
-                                .when(qAiChatHistory.sender.eq(AiChatSender.GPT)) // sender가 GPT enum 값과 동일한 경우
-                                .then(Expressions.stringTemplate("CAST(NULL AS java.lang.String)")) // feedback을 null로 설정
-                                .otherwise(qAiChatFeedback.content) // 그렇지 않으면 실제 feedback 내용 사용
+                                .when(qAiChatHistory.sender.eq(AiChatSender.USER))
+                                .then(qAiChatFeedback.content)
+                                .otherwise(Expressions.stringTemplate("CAST(NULL AS java.lang.String)"))
                 )
                 .from(qAiChatHistory)
                 .leftJoin(qAiChatFeedback).on(qAiChatHistory.id.eq(qAiChatFeedback.aiChatHistory.id))
-                .where(qAiChatHistory.aiChatRoom.id.eq(roomId)) // roomId를 기준으로 필터링
-                .fetch()
-                .stream()
+                .where(qAiChatHistory.aiChatRoom.id.eq(roomId),
+                        qAiChatHistory.id.goe(lastGptMessageIdBeforeFirstUser)) // ID가 lastGptMessageIdBeforeFirstUser 이상인 경우
+                .orderBy(qAiChatHistory.id.asc())
+                .fetch();
+
+        return results.stream()
                 .map(tuple -> new AiChatAndFeedbackInfo(
                         tuple.get(qAiChatHistory.id),
                         tuple.get(qAiChatHistory.sender),
                         tuple.get(qAiChatHistory.content),
-                        tuple.get(3, String.class) // feedback에 해당하는 값 처리
+                        tuple.get(3, String.class) // CaseBuilder에 의해 결정되는 부분입니다.
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
